--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,7 @@
     "angular-bootstrap": "~0.13.0"
   },
   "devDependencies": {
-    "angular-route": "~1.4.4"
+    "angular-route": "~1.4.4",
+    "leaflet.markercluster": "~0.4.0"
   }
 }
