--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
-spring.datasource.url: jdbc:mysql://localhost/autogeo
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.url: jdbc:mysql://localhost/autogeo
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.database-platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost/autogeo
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driverClassName=org.postgresql.Driver
