--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost/autogeo
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=root
 spring.datasource.driverClassName=org.postgresql.Driver
