--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
 			</exclusions>
 		</dependency>
 
+		<dependency>
+			<groupId>de.grundid.opendatalab</groupId>
+			<artifactId>geojson-jackson</artifactId>
+			<version>1.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
