--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "angular-leaflet-directive": "~0.8.1",
     "angular-input-masks": "~1.4.2",
     "angular-i18n": "~1.4.0",
-    "angular-bootstrap": "~0.13.0"
+    "angular-bootstrap": "~0.13.0",
+    "underscore": "~1.8.3"
   },
   "devDependencies": {
     "angular-route": "~1.4.4",
