versao ec2-user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 spring.jpa.database-platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost/autogeo
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://autogeo.cxiwdonio27i.sa-east-1.rds.amazonaws.com/autogeo
+spring.datasource.username=andrecn13
+spring.datasource.password=Andre13029
 spring.datasource.driverClassName=org.postgresql.Driver
